<resources>
    <string name="Enlace">NotitasPro</string>
    <string name="Audio">Audio</string>
    <string name="tv1">ActivityMedia</string>
    <string name="Anterior">Anterior</string>
    <string name="tv2">grabadora</string>
    <string name="Reproducir">Play</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_search">search</string>
    <string name="search">Search Demo</string>
    <string name="submitted">submitted</string>

    <string name="app_name">NotitasPro</string>

    <string name="title_tab0">NOTES</string>
    <string name="title_tab1">TASKS</string>

    <string name="btnNewNota">NEW NOTE</string>
    <string name="btnNewTarea">NEW TASK</string>

    <string name="btnNewAlerta">NEW REMINDER</string>


    <string name="toast_creaNota">Create note</string>
    <string name="toast_creaTarea">Create task</string>
    <string name="toast_creaAlerta">Create reminder</string>


    <string name="toast_notaCreada_">Note inserted</string>
    <string name="toast_notaCreadaProblem_">The note could not be inserted</string>

    <string name="toast_tareaCreada">Task inserted</string>
    <string name="toast_tareaCreadaProblem">The task could not be inserted</string>

    <string name="toast_alertaCreada">Reminder inserted</string>
    <string name="toast_alertaCreadaProblem">The reminder could not be inserted</string>


    <string name="toast_notaEditada">Note edited</string>
    <string name="toast_notaEditadaProblem">The note could not be edited</string>

    <string name="toast_tareaEditada">Task edited</string>
    <string name="toast_tareaEditadaProblem">The task could not be edited</string>

    <string name="toast_alertaEditada">Reminder edited</string>
    <string name="toast_alertaEditadaProblem">The reminder could not be edited</string>


    <string name="alert_Title">Options</string>
    <string name="del_alert_Title">Confirmation</string>
    <string name="del_alert_Message">¿Delete this element?</string>
    <string name="del_alert_resultGood">Element deleted</string>
    <string name="del_alert_resultBad">The element could not be deleted</string>

    <string name="alert_opcEdit">Edit</string>
    <string name="alert_opcAlert">Show reminders</string>
    <string name="alert_opcMult">Show media</string>
    <string name="alert_opcDel">Delete</string>


    <string name="card_fechaCreate">Created:</string>
    <string name="card_fechaLimit">Ends:</string>
    <string name="card_checaStatusBAD">Pending</string>
    <string name="card_checaStatusGOOD">Complete</string>


    <string name="_edit">Edit</string>
    <string name="_delete">Delete</string>
    <string name="_picture">Picture</string>
    <string name="_recorder">Recorder</string>
    <string name="_notification">Notification</string>

    <string name="_takepicture">Take a picture</string>
    <string name="_audio">Reconding Audio</string>

    <string name="btn_ingresa_addNota">ADD NOTE</string>
    <string name="btn_ingresa_addTarea">ADD TASK</string>
    <string name="btn_ingresa_addNoti">ADD REMINDER</string>
    <string name="btn_ingresa_editNota">EDIT NOTE</string>
    <string name="btn_ingresa_editTarea">EDIT TASK</string>
    <string name="btn_ingresa_editNoti">EDIT REMINDER</string>

    <string name="confirmToast_inNote">Enter note</string>
    <string name="confirmToast_inTarea">Enter task</string>
    <string name="confirmToast_inNoti">Enter reminder</string>

    <string name="confirmToast_editNote">Note edited</string>
    <string name="confirmToast_editTarea">Task edited</string>
    <string name="confirmToast_editNoti">Remider edited</string>


    <string name="btnFecha">DATE</string>
    <string name="btnHora">HOUR</string>

    <string name="hint_titulo">Title</string>
    <string name="hint_descri">Description</string>
    <string name="hint_fecha_create">Creation date</string>
    <string name="hint_fecha_limite">Limit date</string>
    <string name="hint_hora_limite">Limit hour</string>

    <string name="check_label">Complete</string>

    <string name="text_title1">Content:</string>
    <string name="text_title2">Creation date:</string>
    <string name="text_title3">Limit task date:</string>

</resources>




















