<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zombie.deliziusz.appnotas.Datos.ActivityDatos">

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="442dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/text_titulo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/txt_titulo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_titulo"
            android:inputType="text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txt_descrip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_descri"
            android:inputType="text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_titulo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title2"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/txt_fechCreacion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_fecha_create"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_titulo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title3"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_fecLimite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_fecha_limite"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#1041b5"
                android:text="@string/btnFecha"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_horaLimite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_hora_limite"
                android:inputType="number"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#FF1041B5"
                android:text="HORA"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                tools:text="@string/btnHora" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/check_Checa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnguardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FF1041B5"
                android:onClick="btnIngresa_click"
                android:text="AGREGAR"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
